[tool.poetry]
name = "rfc-lookup"
version = "1.0.1"
description = "CLI tool for searching and viewing RFC details. Supports searching by query or directly retrieving information for one or more RFC numbers."
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xransum/rfc-lookup"
repository = "https://github.com/xransum/rfc-lookup"
documentation = "https://rfc-lookup.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["rfc", "rfc_lookup"]

[tool.poetry.urls]
Changelog = "https://github.com/xransum/rfc-lookup/releases"

[tool.poetry.scripts]
rfc = "rfc_lookup.command:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.1.8"
importlib-metadata = { version = "^8.6.1", python = "<3.8" }
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
nox = ">=2020.8.22"
pytest = ">=6.2.5"
coverage = { extras = ["toml"], version = ">=6.3" }
safety = ">=1.10.3"
mypy = ">=0.931"
typeguard = ">=2.13.3"
pre-commit = ">=2.17.0"
pre-commit-hooks = ">=4.1.0"
black = ">=22.3"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=22.1.11"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
pep8-naming = ">=0.12.1"
darglint = { version = ">=1.8.1", python = "<4" }
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^5.0.1"
sphinx-rtd-theme = "^1.3.0"
furo = ">=2022.1.2"
Pygments = ">=2.11.2"
poetry = { version = ">=1.1.12", python = "<4" }
pytest-datadir = ">=1.3.1"
pyupgrade = ">=2.31.0"
isort = ">=5.10.1"
myst-parser = ">=0.16.1"
reorder-python-imports = "^3.12.0"
"ruamel.yaml" = "^0.18.6"
typing-extensions = ">=4.0.1"
types-beautifulsoup4 = "^4.12.0"
nox-poetry = "^1.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rfc_lookup"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future.*", # imp: in favour of importlib
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
