[project]
name = "rfc-lookup"
version = "1.1.0"
description = "CLI tool for searching and viewing RFC details. Supports searching by query or directly retrieving information for one or more RFC numbers."
authors = [{ name = "xransum", email = "xransum@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8,<4.0"
keywords = ["rfc", "rfc_lookup"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "beautifulsoup4>=4.12.3",
]

[project.urls]
Homepage = "https://github.com/xransum/rfc-lookup"
Repository = "https://github.com/xransum/rfc-lookup"
Documentation = "https://rfc-lookup.readthedocs.io"
Changelog = "https://github.com/xransum/rfc-lookup/releases"

[project.scripts]
rfc = "rfc_lookup.command:main"

[dependency-groups]
dev = [
    "nox>=2020.8.22",
    "pytest>=6.2.5",
    "coverage[toml]>=6.3",
    "safety>=1.10.3",
    "mypy>=0.931",
    "typeguard>=2.13.3",
    "pre-commit>=2.17.0",
    "pre-commit-hooks>=4.1.0",
    "black>=22.3",
    "flake8>=4.0.1",
    "flake8-bandit>=2.1.2",
    "flake8-bugbear>=22.1.11",
    "flake8-docstrings>=1.6.0",
    "flake8-rst-docstrings>=0.2.5",
    "pep8-naming>=0.12.1",
    "darglint>=1.8.1",
    "xdoctest[colors]>=0.15.10",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=5.0.1",
    "sphinx-rtd-theme>=1.3.0",
    "furo>=2022.1.2",
    "Pygments>=2.11.2",
    "pyupgrade>=2.31.0",
    "isort>=5.10.1",
    "myst-parser>=0.16.1",
    "reorder-python-imports>=3.12.0",
    "typing-extensions>=4.0.1",
    "types-beautifulsoup4>=4.12.0",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rfc_lookup"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future.*",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rfc_lookup"]
